[gd_scene load_steps=6 format=3 uid="uid://c2sls4i7bvr7u"]

[ext_resource type="Script" path="res://addons/godot-course/ui/menus/login_register_menu.gd" id="1_4tayq"]
[ext_resource type="Theme" uid="uid://dlwl2v5s14s14" path="res://addons/godot-course/ui/main_theme.tres" id="1_q77ht"]
[ext_resource type="FontFile" uid="uid://dfvoqria0m0jj" path="res://addons/godot-course/ui/fonts/square block.ttf" id="3_eq1k0"]
[ext_resource type="FontFile" uid="uid://dg3dawn3jkrrn" path="res://addons/godot-course/ui/fonts/Accuratist.otf" id="4_jwki3"]
[ext_resource type="AudioStream" uid="uid://bip7no0q26c03" path="res://addons/godot-course/ui/sounds/click.wav" id="5_0ebd7"]

[node name="login_register_menu" type="CanvasLayer"]
script = ExtResource("1_4tayq")

[node name="Panel" type="Panel" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_default_cursor_shape = 8
theme = ExtResource("1_q77ht")

[node name="PanelContainer" type="PanelContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -310.5
offset_top = -125.0
offset_right = 310.5
offset_bottom = 125.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="Panel/PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 30
theme_override_constants/margin_top = 80
theme_override_constants/margin_right = 30
theme_override_constants/margin_bottom = 30

[node name="VBoxContainer" type="VBoxContainer" parent="Panel/PanelContainer/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 12

[node name="Lb_message" type="Label" parent="Panel/PanelContainer/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_fonts/font = ExtResource("3_eq1k0")
theme_override_font_sizes/font_size = 24
text = "Inicia sesión o registrate"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Bt_login" type="Button" parent="Panel/PanelContainer/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
mouse_default_cursor_shape = 2
text = "INICIAR SESIÓN"

[node name="Bt_register" type="Button" parent="Panel/PanelContainer/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
mouse_default_cursor_shape = 2
text = "REGISTRARSE"

[node name="Lb_title" type="Label" parent="Panel/PanelContainer"]
layout_mode = 2
size_flags_vertical = 0
theme_override_fonts/font = ExtResource("4_jwki3")
theme_override_font_sizes/font_size = 55
text = "Ingresar/Registrar"

[node name="sd_click" type="AudioStreamPlayer" parent="."]
unique_name_in_owner = true
stream = ExtResource("5_0ebd7")
bus = &"UI"
